# phoneUtils

./: README.md  pyproject.toml
android/: previewBootAnimation.py
phoneutils/: main.py
phoneutils/android/: .gitignore
phoneutils/android/lib/: BinaryFileViewer.py  FileExplorer.py  lib.py
phoneutils/android/lib/parser/: all.py  dex.py  font.py  manifest_bin.py  web.py
phoneutils/android/tabs/: ApkDownloadTab.py  BinaryFileViewerTab.py  BootAnimationTab.py  CheatsTab.py  IntentAnalyzerTab.py
phoneutils/ios/: main.py
